hphp/test/slow/exceptions/shadow_prop.php.expectf
Catchable fatal error: Type-hint of 'MyException::file' must be string (as in class Exception), not mixed in %s/test/slow/exceptions/shadow_prop.php on line 11
